Fix large gap between rows of chart-list
Remove `flex: 1` so it no longer fills all available space.

--- a/frontend/src/app/chart-index/chart-index.component.scss
+++ b/frontend/src/app/chart-index/chart-index.component.scss
@@ -7,8 +7,4 @@
   margin: auto;
   display: flex;
   align-items: center;
-
-  app-chart-list {
-    flex: 1;
-  }
 }
